# glitch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
app/glitch/: Cargo.toml  build.rs
app/glitch/assets/: styles.css  tiptap-editor.html
app/glitch/src/: chat.rs  commands.rs  extract.rs  main.rs  menu.rs  permissions.rs  render.rs  settings.rs  state.rs  sync.rs  types.rs  vault_actions.rs  watch.rs
app/glitch/src/components/: app.rs  bulk_ops.rs  chat_panel.rs  cmd_palette.rs  editor.rs  extractor.rs  graph_view.rs  mod.rs  permission_modal.rs  settings_panel.rs  sidebar.rs  slash_palette.rs  table.rs
crates/glitch-ai/: Cargo.toml
crates/glitch-ai/src/: client.rs  events.rs  lib.rs
crates/glitch-core/: Cargo.toml
crates/glitch-core/src/: frontmatter.rs  lib.rs  note.rs  table.rs  tree.rs  vault.rs  watcher.rs
crates/glitch-embed/: Cargo.toml
crates/glitch-embed/src/: lib.rs
crates/glitch-mcp/: Cargo.toml
crates/glitch-mcp/src/: lib.rs  pipe.rs  proto.rs  stdio.rs
crates/glitch-sync/: Cargo.toml
crates/glitch-sync/src/: lib.rs
packaging/inno/: glitch.iss
packaging/msix/: AppxManifest.xml  build-msix.ps1
tools/: gen_icon.py
