[workspace]
resolver = "2"
members = [
    "crates/glitch-core",
    "crates/glitch-ai",
    "crates/glitch-sync",
    "crates/glitch-mcp",
    "crates/glitch-embed",
    "app/glitch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Terry James <frank.terry.james@gmail.com>"]
repository = "https://github.com/terryjames/glitch"

[workspace.dependencies]
# Async + IO
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
similar = "2"

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
notify = "6"
camino = { version = "1", features = ["serde1"] }

# Markdown
pulldown-cmark = "0.12"
serde_yaml = "0.9"

# Article extraction
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
dom_smoothie = "0.13"
htmd = "0.2"

# Dates / IDs
jiff = { version = "0.1", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Scripting
rhai = "1"

# UI
dioxus = { version = "0.6", features = ["desktop"] }

# Native dialogs
rfd = "0.15"

# Platform dirs
dirs-next = "2"

# Internal crates
glitch-core = { path = "crates/glitch-core" }
glitch-ai = { path = "crates/glitch-ai" }
glitch-sync = { path = "crates/glitch-sync" }
glitch-mcp = { path = "crates/glitch-mcp" }
glitch-embed = { path = "crates/glitch-embed" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
