[package]
name = "glitch-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
notify.workspace = true
camino.workspace = true
pulldown-cmark.workspace = true
serde_yaml.workspace = true
jiff.workspace = true
walkdir = "2.5"
