[package]
name = "glitch-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
camino.workspace = true
